<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:src="@android:drawable/presence_online"
        android:contentDescription="@string/missing" />

    <ImageView
        android:id="@+id/UserImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/Status"
        android:src="@drawable/ic_launcher" 
        android:contentDescription="@string/missing" />

    <TextView
        android:id="@+id/Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/UserImg"
        android:text="@string/username" />
    
    <ImageButton
        android:id="@+id/doChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@android:drawable/sym_action_chat"
        android:contentDescription="@string/missing"  />

    <TextView
        android:id="@+id/user_jid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/doChat"
        android:text="@string/example_email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>